--- a/index.html
+++ b/index.html
@@ -10,26 +10,20 @@
 </head>
 <body>
   <div id="wall">
-    <div class="tag-1"></div>
-    <div id="tag-2"></div>
-    <div id="tag-3" class="slick wicked"></div>
+    <div class="tag-1" class="slick-one"></div>
+    <div id="tag-2" class="slick-two"></div>
+    <div id="tag-3" class="slick-wicked"></div>
     <div class="parent">
-      <div id="tag-4"></div>
+      <div id="tag-4" class="slick-four"></div>
     </div>
     <div class="parent">
-      <div id="tag-5" class="slick"></div>
+      <div id="tag-5" class="slick-five"></div>
     </div>
     <div class="parent">
-      <div></div>
-      <div>
-        <div id="tag-6"></div>
-      </div>
+        <div id="tag-6" class="slick-six"></div>
     </div>
     <div class="parent">
-      <div>
-        <div id="tag-7" class="slick"></div>
-      </div>
-      <div></div>
+        <div id="tag-7" class="slick-seven"></div>
     </div>
   </div>
 </body>
