add higher specificity

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
       <div id="tag-4"></div>
     </div>
     <div class="parent">
+      <!-- div#wall div.parent #tag-5.slick-->
       <div id="tag-5" class="slick"></div>
     </div>
     <div class="parent">
       <div></div>
       <div>
+        <!-- div#wall div.parent + div.parent div + div div#tag-6 -->
         <div id="tag-6"></div>
       </div>
     </div>
